--- a/task-github.css
+++ b/task-github.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .container{
     width: 1200px;
     height: 580px;
@@ -58,4 +64,32 @@
 .group{
     width: 210px;
     height: 30px;
+}
+
+@media only screen and (max-width:990px){
+
+    .container{
+        width: 500px;
+        height: 1150px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .main-bg{
+        height: 550px;
+    }
+
+    .content{
+        width: 450px;
+    }
+
+    .group{
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .btn-gp{
+        width: 225px;
+    }
 }
